feat: secure editorial api with jwt